# skillkit

./: .gitignore  .npmignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prd.md  skillkit.code-workspace  tsconfig.base.json  tsconfig.json  tsup.config.ts  turbo.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: add-source.md  skill-submission.yml
.github/workflows/: ci.yml  deploy-docs.yml  process-skill-submission.yml  publish.yml
apps/skillkit/: README.md  package.json  tsup.config.ts
clients/python/: pyproject.toml
clients/python/skillkit/: __init__.py  client.py  models.py
clients/python/tests/: test_client.py
docs/fumadocs/: .gitignore  .vercelignore  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  source.config.ts  tsconfig.json  turbo.json  vercel.json
docs/skillkit/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  styles.css  types.ts  (+2 more)
e2e/: commands-settings.e2e.test.ts  core-commands.e2e.test.ts  hooks-orchestration.e2e.test.ts  methodology-plan.e2e.test.ts  onboarding-ui.e2e.test.ts  plugin-system.e2e.test.ts  skill-translator.e2e.test.ts  team-collaboration.e2e.test.ts  translation.e2e.test.ts  tsconfig.json  vitest.config.ts
marketplace/: CONTRIBUTING.md  schema.json  skills.json  sources-schema.json  sources.json
registry/: README.md  SKILLS.md
schemas/: skill.schema.json
scripts/: compute-quality.ts
src/: cli.ts  index.ts
tests/: agents.test.ts  providers.test.ts  skills.test.ts  validate.test.ts
(+650 files in other folders)
